deployments/kubernetes/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: discord
  namespace: reaper
  labels:
    app: discord
spec:
  replicas: 10
  selector:
    matchLabels:
      app: discord
  serviceName: discord
  template:
    metadata:
      labels:
        app: discord
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: discord
          image: registry.digitalocean.com/lee-aaron-reg/discord
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
