deployments/kubernetes/api.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: api
  namespace: default
  labels:
    app: api
spec:
  template:
    spec:
      containers:
        - image: registry.digitalocean.com/lee-aaron-registry/shuudann-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          env:
            - name: APP_REDIS_URI
              value: rediss://default:AVNS_Uj9dRl3vsrzkiw5rYfD@db-redis-sfo3-06834-do-user-9389493-0.b.db.ondigitalocean.com:25061
