deployments/kubernetes/discord.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord
  labels:
    app: discord
spec:
  type: ClusterIP
  selector:
    app: discord
  ports:
  - port: 9001
    targetPort: 9001
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: discord
  labels:
    app: discord
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discord
  serviceName: discord
  template:
    metadata:
      labels:
        app: discord
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: discord
          image: registry.digitalocean.com/lee-aaron-registry/shuudann-discord
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9001
