deployments/kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: reaper
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: stripe
  namespace: reaper
  labels:
    app: stripe
spec:
  selector:
    app: stripe
  ports:
    - name: http
      port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: discord
  namespace: reaper
  labels:
    app: discord
spec:
  selector:
    app: discord
  ports:
    - name: http
      port: 9001
