deployments/kubernetes/stripe.yaml
apiVersion: v1
kind: Service
metadata:
  name: stripe
  labels:
    app: stripe
spec:
  type: ClusterIP
  selector:
    app: stripe
  ports:
  - port: 9000
    targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stripe
  labels:
    app: stripe
spec:
  selector:
    matchLabels:
      app: stripe
  replicas: 2
  template:
    metadata:
      labels:
        app: stripe
    spec:
      containers:
        - name: stripe
          image: registry.digitalocean.com/lee-aaron-registry/shuudann-stripe
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
